--- a/index.html
+++ b/index.html
@@ -51,6 +51,55 @@
 
     <!-- twoblog section ends here -->
 
+    <!-- center poster starts here  -->
+
+    <div class="centerposter">
+        <div class="centerpostermain">
+            <h5>NAM VEL SIT AMET LIBERO SCELERISQUE FACILISIS ELEIFEND VITAE URNA</h5>
+            <hr>
+            <h3>Morbi maximus justo</h3>
+        </div>
+    </div>
+
+    <!-- center poster ends here  -->
+
+    <!-- image section starts here  -->
+
+    <div class="imgg">
+        <div class="imgg_main clearfix">
+            <div class="imgg_text">
+                <h5>NAM VEL SIT AMET LIBERO SCELERISQUE FACILISIS ELEIFEND VITAE URNA</h5>
+                <hr>
+                <h3>Morbi maximus justo</h3>
+            </div>
+            <div class="imgg_left">
+                <img src="img/pic01.jpg" alt="">
+                <img src="img/pic03.jpg" alt="">
+            </div>
+            <div class="imgg_right">
+                <img src="img/pic02.jpg" alt="">
+                <img src="img/pic04.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- image section ends here  -->
+
+    <!-- footer section strats here  -->
+
+    <div class="footer">
+        <div class="footer_main">
+            <div class="social_div">
+                <a href="https://twitter.com/roshanraut012" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="mailto:rautroshan6001@gmail.com"><i class="fa fa-envelope"></i></a>
+            </div>
+            <p>&copy; Untitled All rights reserved</p>
+        </div>
+    </div>
+
+    <!-- footer section ends here  -->
 
 </body>
 </html>
